--- a/PoS/App.xaml
+++ b/PoS/App.xaml
@@ -24,6 +24,13 @@
                 </ResourceDictionary>
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="HeaderButton" TargetType="{x:Type Button}" BasedOn="{StaticResource SquareButtonStyle}">
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Height" Value="30" />
+                <Setter Property="Width" Value="30" />
+                <Setter Property="Margin" Value="5 5 5 5" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
